<resources>


    <string name="app_desc">PMP Mobile application</string>
    <!--paid-->
    <string name="app_name">PMP master</string>
    <string name="facebook_app_id">270606497079808</string>
    <string name="fb_login_protocol_scheme">fb270606497079808</string>

    <!--free-->
    <!--<string name="facebook_app_id">324361838333835</string>-->
    <!--<string name="fb_login_protocol_scheme">fb324361838333835</string>-->
    <!--<string name="app_name">PMP master free</string>-->

    <string name="welcome_title">Welcome back</string>
    <string name="login_title">Login to continue</string>
    <string name="username_hint">Username or Email</string>
    <string name="username">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="show_password_text">SHOW</string>
    <string name="hide_password_text">HIDE</string>

    <string name="invalid_credentials_error">Username/Password combination is invalid</string>
    <string name="no_internet_error">No internet connection</string>
    <string name="confirm_logout_title">Log out ?</string>
    <string name="confirm_logout_text">If you log out you won\'t receive any \n notifications
        from PMP app and can\'t\n use it. Do you still want to log out?</string>
    <string name="logout">Log out</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="selected_object">Selected_Object</string>

    <string name="forgot_password_text">Forgot password?</string>
    <string name="sign_up_text">Create new account</string>
    <string name="forgot_password_description">
        Please write your email here to send you an email with a password reset link
    </string>
    <string name="email_hint">Email</string>
    <string name="send_text">SEND</string>
    <string name="email_format_error">Email format isn\'t correct</string>
    <string name="new_password_format_error">Password format isn\'t correct</string>

    <string name="password_recovery_text">Password recovery</string>
    <string name="password_recovery_description">
        Create a new password that is at least 6 characters long.
        A strong password is combination of letters, numbers, and punctuation marks
    </string>
    <string name="new_password_hint">Enter a new password</string>
    <string name="to_login_text">To Login</string>

    <string name="forgot_password_success_text">Thanks! Your email sent.</string>
    <string name="forgot_password_success_description">
        Please follow the link in your email to reset your password.
        If the email isn\'t received, please contact the administration.
    </string>

    <string name="password_recovery_success_text">New Password created</string>
    <string name="password_recovery_success_description">
        You\'ve create new password and now can login with in on login page
    </string>
    <string name="email_field_empty_error">Please fill the email field.</string>
    <string name="password_field_empty_error">PLease fill the password field.</string>
    <string name="no_connection">Please Check your Connection</string>
    <string name="sign_up">I don\'t have an account | <u>Sign Up</u></string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_confirm_message">Password not match</string>
    <string name="full_name_error_message">Please fill name field</string>


    <!--Home Messages-->
    <string name="exam_preparation_message">Get ready for the exam</string>
    <string name="btn_10_question_hint">Quick 10 Question</string>
    <string name="btn_skip_hint">Skip</string>
    <string name="question_timer">Question timer</string>
    <string name="select_timer_type_text">Select timer type</string>
    <string name="timer_type_error">Please select timer type</string>
    <string name="exam_question_number_hint">Set questions number</string>
    <string name="hours">Hour</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="time_picker_error">Please pick time</string>
    <string name="start_exam_text">Start Exam</string>
    <string name="question_number_error">Please choose valid number of questions</string>

    <!-- Exam -->
    <string-array name="timer_type">
        <item>Timer for Exam </item>
        <item>Timer for question </item>
    </string-array>
    <string name="select_timer_type">Select timer</string>
    <string name="exam_option">Exam setup</string>
    <string name="Sign_out">Sign out</string>
    <string name="select_process_group_text">Select process group</string>
    <string name="practice_settings">Practice settings</string>
    <string name="select_knowledge_area_text">Select knowledge area</string>
    <string name="start_practice_text">Start practice</string>
    <string name="select_practice_type">Select practice Type</string>
    <string name="select_practice_field">Select practice field</string>
    <string name="practice_type_errors_message">Please select practice type</string>
    <string name="practice_field_error_message">Please select practice field</string>
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="save">Save</string>
    <string name="user_level">Level</string>
    <string name="phone_hint">Phone N#</string>
    <string name="ask_question">Ask question</string>
    <string name="ask">Ask</string>
    <string name="ask_question_message">Please ask a question</string>
    <string name="ask_new_question">Ask New Question</string>
    <string name="no_answer_yes_message">This Question does not answer yet, please try in another time
    Thank you</string>
    <string name="question_notes_title">Question notes</string>
    <string name="personal_notes_title">Personal notes</string>
    <string name="my_notes_list">My notes list</string>
    <string name="my_ask_list_title">My ask list</string>
    <string name="note_delete_message">Are you sure you want to delete this note?</string>
    <string name="ask_delete_message">Are you sure you want to delete this question?</string>
    <string name="delete_confirmation_title">Delete confirmation</string>
    <string name="question">Question</string>
    <string name="done">Done</string>
    <string name="add_new_note_hint">Add your note here ....</string>
    <string name="update">Update</string>
    <string name="note">Note detail</string>
    <string name="add_new_note_title">Add note</string>
    <string name="add_new_question_note_title">Add new Question note</string>
    <string name="add">Add</string>
    <string name="wrong_answer_title">Wrong answer</string>
    <string name="correct_answer_title">Correct answer</string>
    <string name="update_profile">Update profile</string>
    <string name="update_name_erro_message">Name field is not valid or empty</string>
    <string name="change_password_title">Change password</string>
    <string name="Preferred_study_time_title">Preferred study time</string>
    <string name="exam_time_title">Next exam date</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="new_name_hint">New name</string>
    <string name="report_title">Report Question</string>
    <string-array name="menu_items">
        <item>Home</item>
        <item>Practices</item>
        <item>Exam</item>
        <item>Notes</item>
        <item>Ask Instructor</item>
        <item>Profile</item>
    </string-array>

    <string-array name="menu_items_colors">
        <item>#1FC1CC</item>
        <item>#19B3CA</item>
        <item>#13A5C8</item>
        <item>#0C96C5</item>
        <item>#0688C3</item>
        <item>#007AC1</item>
    </string-array>
    <string-array name="practice_type_array">
        <item>Select practice type</item>
        <item>Knowledge areas</item>
        <item>Process Groups</item>
    </string-array>
    <string-array name="knowledge_areas_array">
        <item>Select knowledge areas</item>
        <item>Project integration management</item>
        <item>Project scope management</item>
        <item>Project schedule management</item>
        <item>Project cost management</item>
        <item>Project quality management</item>
        <item>Project resource management</item>
        <item>Project communications management</item>
        <item>Project risk management</item>
        <item>Project procurement management</item>
        <item>Project stakeholder management</item>
    </string-array>
    <string-array name="process_groups_area">
        <item>Select process groups</item>
        <item>Initiating Process Group</item>
        <item>Planning Process Group</item>
        <item>Executing Process Group</item>
        <item>Monitoring and Controlling Process Group</item>
        <item>Closing Process Group</item>
    </string-array>
    <string-array name="levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_up_message">Time\'s Up !</string>
</resources>
