<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/back_button_style"
        custom:srcCompat="@drawable/ic_back_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        style="@style/default_margin_style"
        android:layout_marginTop="16dp"
        android:textColorHint="#333333"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:maxLength="255"
            android:maxLines="1"
            android:textColor="#7d333333"
            android:textColorHint="#333333"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_confirm_password"
        style="@style/default_margin_style"
        android:layout_marginTop="25dp"
        android:textColorHint="#333333"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password_hint"
            android:inputType="textPassword"
            android:maxLength="255"
            android:maxLines="1"
            android:textColor="#7d333333"
            android:textColorHint="#333333"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_user"
        style="@style/default_button_style"
        android:layout_marginBottom="30dp"
        android:background="@drawable/default_button"
        android:enabled="true"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>