<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/back_button_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            custom:srcCompat="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/forgot_password_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="10dp"
            android:textColor="@color/orangePink"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Error Message" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/forgot_password_description"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            style="@style/default_margin_style"
            android:layout_marginTop="32dp"
            android:textColorHint="#333333"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="255"
                android:maxLines="1"
                android:textColor="#7d333333"
                android:textColorHint="#333333"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            style="@style/default_button_style"
            android:layout_marginBottom="8dp"
            android:text="@string/send_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <include
            layout="@layout/progress_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>