<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_title"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_holder"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/profile_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/default_image"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/iv_profile_edit"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        android:scaleType="center"
        android:src="@drawable/ic_photo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        style="@style/default_margin_style"
        android:layout_marginTop="100dp"
        android:layout_height="58dp"
        android:textColorHint="#333333"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_edit">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLength="255"
            android:maxLines="1"
            android:textColor="#7d333333"
            android:textColorHint="#333333"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/empty_white_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_username">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_password_normal" />

        <TextView
            style="@style/TextStyle13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/change_password_title" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_update_user"
        android:layout_marginBottom="30dp"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/default_button"
        android:enabled="true"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>